--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
               <p>I usually work with vanilla javascript and sass for small projects, any library/technology/code I find cool (like ThreeJs used on this site for 3d animations), and a popular CMS like WordPress or Drupal for content management in bigger works.</p>
             </div>
             <div class="canada">
-              <h2>🍁Candian Employer🍁</h2>
+              <h2>🍁Canadian Employer🍁</h2>
               <p>Thanks to the Canada-Colombia Free Trade Agreement, Canadian employers may hire highly skilled colombian workers easier through this option.</p>
               <p>Work permits issued under this agreement are exempt from the Labour Market Impact Assessment (LMIA), which significantly reduces the time and costs needed for the worker to start work in Canada.</p>
             </div>
