--- a/index.html
+++ b/index.html
@@ -318,20 +318,12 @@
             <p class="slogan"><span class="italic">Hi!</span> I'm a front-end developer based <span
                 class="italic">in</span> <span style="text-decoration: line-through;">US</span> Colombia</p>
             <p>An eternal student who likes the sky. Always exploring new fields, techniques and hobbies. A person who
-              likes languages, challenges and good noodles. I've had the opportunity to study and work abroad, thence at
-              this time I want to relocate again.</p>
+              likes languages, challenges and good noodles.</p>
             <p>I'm also a Commercial Airplane Pilot and Software Technician with +4 years experience on Monodual Agency
               as Web Developer, planning and developing projects for clients in pharma, mining and government.</p>
             <p>I usually work with vanilla javascript and sass for small projects, any library/technology/code I find
               cool (like ThreeJs used on this site for 3d animations), and a popular CMS like WordPress or Drupal for
               content management in bigger works.</p>
-              <div style="z-index: 90;" class="canada">
-                <h2>🍁Canadian Employer🍁</h2>
-                <p>Thanks to the Canada-Colombia Free Trade Agreement, Canadian employers may hire highly skilled colombian
-                  workers easier through this option.</p>
-                <p>Work permits issued under this agreement are exempt from the Labour Market Impact Assessment (LMIA),
-                  which significantly reduces the time and costs needed for the worker to start work in Canada.</p>
-              </div>
           </div>
         </div>
         <div class="col-md-5" id="totem">
